<resources>
    <string name="app_name">mapApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="confirm_password">confirm password</string>
    <string name="registration">Registration</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account">Enter your email and we’ll send you a link to get back into your account.</string>
    <string name="next">Next</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="name_and_surname">name and surname</string>
    <string name="phone_number">phone number</string>
    <string name="here_s_how_your_profile_looks_you_can_update_your_information_with_edit_button_on_top_left">Here’s how your profile looks! You can update your information with edit button on top left.</string>
    <string name="please_click_to_icon_on_top_left_to_save_changes_on_your_profile">Please click to icon on top left to save changes on your profile!</string>
    <string name="having_a_trouble_let_us_know">Having a Trouble? Let us know.</string>
    <string name="Name">Name</string>
    <string name="E_mail">E-mail</string>
    <string name="message">Message</string>
    <string name="welcome">Welcome!</string>
    <string name="here_you_can_see_your_previous_feedings">Here you can see your previous feedings</string>
    <string name="profile">Profile</string>
    <string name="my_feeding_history">My Feeding History</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="details">Details</string>
    <string name="add_food">Add Food</string>
</resources>